tests/errors/compiler/no_ident_after_goto/int_after_goto.c
void main()
{
	goto 1;
}
